# hierocode

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
src/hierocode/: __init__.py  cli.py  cli_shell.py  cli_wizard.py  config.py  config_writer.py  engine.py  exceptions.py  mcp_server.py
src/hierocode/auth/: helpers.py
src/hierocode/broker/: aliases.py  budget.py  capacity.py  context.py  dispatcher.py  edits.py  escalation.py  estimator.py  patcher.py  plan_cache.py  plan_schema.py  planner.py  pricing.py  progress.py  prompts.py  qa.py  quota.py  ranking.py  router.py  skeleton.py  usage.py  workers.py
src/hierocode/models/: __init__.py  schemas.py
src/hierocode/providers/: __init__.py  _models.py  anthropic.py  base.py  claude_code_cli.py  codex_cli.py  lmstudio.py  ollama.py  openai_compatible.py  options.py  transformers_local.py
src/hierocode/repo/: __init__.py  diffing.py  files.py  prompts.py  scanner.py  slicer.py
src/hierocode/runtime/: gpu.py  recommendations.py  resources.py
src/hierocode/shell_handlers/: __init__.py  _prompts.py  aliases.py  apply.py  (+2 more)
tests/: test_cli_apply_flag.py  test_cli_doctor.py  test_cli_shell.py  test_cli_wizard.py  test_config.py  test_config_writer.py  test_diffing.py  test_providers.py  test_resources.py
tests/broker/: test_aliases.py  test_budget.py  test_capacity.py  test_dispatcher.py  test_estimator.py  test_patcher.py  test_plan_cache.py  test_plan_schema.py  test_planner_exploration.py  test_pricing.py  test_progress.py  test_prompts.py  test_qa.py  test_quota.py  test_skeleton.py  test_usage.py
tests/integration/: conftest.py  test_anthropic_live.py  test_claude_code_cli_live.py  test_ollama_live.py  test_pipeline_live.py
tests/providers/: test_anthropic.py  test_anthropic_caching.py  test_claude_code_cli.py  test_claude_code_cli_exploration.py  test_codex_cli.py  test_codex_cli_exploration.py  test_ollama.py  test_openai_compatible.py
tests/runtime/: test_gpu.py
tests/shell_handlers/: test_aliases.py  test_apply.py  test_broker_cmds.py  test_prompts_helpers.py  test_usage_cmd.py
tests/unit/: test_cli_draft.py  test_debug.py  test_dispatcher_edits.py  test_edits.py  test_engine.py  test_generate_options.py  test_mcp_server.py  test_phase2.py
(+3 files in other folders)
