[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hierocode"
version = "0.3.3"
description = "A local-first hierarchical coding orchestrator for delegating tasks to local or self-hosted models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mohith K Das", email = "mohith@tuta.io" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "anthropic>=0.39.0",
    "prompt_toolkit>=3.0.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
hierocode = "hierocode.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/hierocode"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
